[gd_scene load_steps=8 format=3 uid="uid://bc4q2yey6jt0b"]

[ext_resource type="Script" path="res://Scripts/Weapon/Weapon.gd" id="1_uchjy"]
[ext_resource type="PackedScene" uid="uid://btffik0elil28" path="res://Assets/Models/ShortGun/ShortGunModel.tscn" id="2_siokc"]
[ext_resource type="Script" path="res://Scripts/Weapon/WeaponStates/WeaponStateManager.gd" id="3_r4hj4"]
[ext_resource type="Script" path="res://Scripts/Weapon/WeaponAnimationController.gd" id="3_she38"]
[ext_resource type="Script" path="res://Scripts/Weapon/WeaponStates/WeaponStateDefaultProjectile.gd" id="4_lsx6g"]
[ext_resource type="Script" path="res://Scripts/Weapon/WeaponStates/WeaponStateOutOfAmmo.gd" id="5_k1ch1"]
[ext_resource type="Script" path="res://Scripts/Weapon/WeaponReloadComponent.gd" id="7_n2y0x"]

[node name="PlasmaBolterWeapon" type="Node3D" node_paths=PackedStringArray("weaponBarrelEnd")]
script = ExtResource("1_uchjy")
weaponBarrelEnd = NodePath("BarrelEnd")

[node name="ShortGunModel" parent="." instance=ExtResource("2_siokc")]

[node name="WeaponAnimationController" type="Node" parent="." node_paths=PackedStringArray("animationPlayer", "audioAnimationPlayer")]
script = ExtResource("3_she38")
animationPlayer = NodePath("../PlaceholderAnimationPlayer")
audioAnimationPlayer = NodePath("../PlaceholderAnimationPlayer")

[node name="WeaponStateManager" type="Node" parent="." node_paths=PackedStringArray("stateDefault", "stateOutOfAmmo")]
script = ExtResource("3_r4hj4")
stateDefault = NodePath("WeaponStateDefaultProjectile")
stateOutOfAmmo = NodePath("WeaponStateOutOfAmmo")

[node name="WeaponStateDefaultProjectile" type="Node" parent="WeaponStateManager" node_paths=PackedStringArray("barrelEnd", "shootSoundPlayer")]
script = ExtResource("4_lsx6g")
barrelEnd = NodePath("../../BarrelEnd")
shootSoundPlayer = NodePath("../../ShootSound")

[node name="WeaponStateOutOfAmmo" type="Node" parent="WeaponStateManager"]
script = ExtResource("5_k1ch1")

[node name="BarrelEnd" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.225813)

[node name="RayCast3D" type="RayCast3D" parent="BarrelEnd"]
target_position = Vector3(0, 0, 0)

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]

[node name="PlaceholderAnimationPlayer" type="AnimationPlayer" parent="."]

[node name="WeaponReloadComponent" type="Node" parent="."]
script = ExtResource("7_n2y0x")

[editable path="ShortGunModel"]
